basic html structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
----
-layout: default
-title: Rina Friedberg
----
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Rina Friedberg</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
 
