setting up basic website

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
 
-<h1>Rina Friedberg</h1>
-<p>My first paragraph.</p>
+<p> I love problems at the intersecstions of statistics, economics, causal inference, machine learning, and social impact. <P>
 
 </body>
 </html>
