--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<title> Rina Friedberg <title>
+<head>
+
 <body>
 
 <p> I love problems at the intersecstions of statistics, economics, causal inference, machine learning, and social impact. <P>
