adding doc title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body>
 
-<p> I love problems at the intersecstions of statistics, economics, causal inference, machine learning, and social impact. <P>
+<h> Rina Friedberg </h>
+
+<p> I love problems at the intersecstions of statistics, economics, causal inference, machine learning, and social impact. <p>
 
 </body>
 </html>
