testing heading stylse

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
 
-<h> Rina Friedberg </h>
+<h1> Rina Friedberg </h1>
 
-<p> I love problems at the intersecstions of statistics, economics, causal inference, machine learning, and social impact. <p>
+<p> Statistician working on problems at the intersecstions of experimentation, economics, causal inference, machine learning, and social impact. <p>
 
 </body>
 </html>
