--- a/code.html
+++ b/code.html
@@ -16,6 +16,7 @@
 <div class="menu-item"><a href="code.html" class="current">code</a></div>
 </td>
 <td id="layout-content">
+<h1>Code</h1>
 <p>Local Linear Forests
 Code is available in the R package grf, from <a href="https://cran.r-project.org/web/packages/grf/index.html">CRAN</a> and <a href="https://github.com/grf-labs/grf">Github</a>.</p>
 <p>Gender-Based Violence Analytics
@@ -24,7 +25,7 @@ Tutorial code and example datasets are available on <a href="https://github.com/
 Tutorial code and example datasets are available on <a href="https://github.com/rinafriedberg/gbv-analytics/tree/master/Spatial_Statistics">Github</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-04 15:40:24 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-07 09:40:52 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
