--- a/research.html
+++ b/research.html
@@ -16,6 +16,7 @@
 <div class="menu-item"><a href="code.html">code</a></div>
 </td>
 <td id="layout-content">
+<h1>Publications and Preprints</h1>
 <p><b>R. Friedberg</b>, C. Sarnquist, G. Nyairo, M. Amuyunzu-Nyamongo, M. Baiocchi. Understanding the spatial burden of gender-based violence: Modelling patterns of violence in Nairobi, Kenya through geospatial information. Under review. 2020. (<a href="https://arxiv.org/abs/2002.06710">arxiv</a>)</p>
 <p><b>R. Friedberg</b>, M. Baiocchi, E. Rosenman, M. Amuyunzu-Nyamongo, G. Nyairo, C. Sarnquist. Mental health and gender-based violence: An exploration of depression, PTSD, and anxiety among adolescents in informal settlements participating in an empowerment intervention. Under review. 2020.</p>
 <p><b>R. Friedberg</b>, J. Tibshirani, S. Athey, S. Wager. Local Linear Forests. Journal of Computational and Graphical Statistics, 2020. (<a href="https://arxiv.org/abs/1807.11408">arxiv</a>, <a href="https://www.tandfonline.com/doi/abs/10.1080/10618600.2020.1831930">paper</a>)</p>
@@ -24,7 +25,7 @@
 <p>J. Clancy, <b>R. Friedberg</b>, I. Kasmalkar, I. Loh, T. Padurariu, C. Silva, S. Vasudevan. Ergodicity and Conservativity of products of infinite transformations and their inverses. Colloquium Mathematicum, 2016. (<a href="https://arxiv.org/abs/1408.2445">arxiv</a>, <a href="https://www.researchgate.net/publication/264673831_Ergodicity_and_Conservativity_of_products_of_infinite_transformations_and_their_inverses">paper</a>)</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-04 15:40:23 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-07 09:40:54 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
