Update research to include recent papers.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <table class="imgtable"><tr><td>
 <img src="bio.jpg" alt="Rina Friedberg" />&nbsp;</td>
 <td align="left"><p>Experimentation and causal inference researcher with LinkedIn's Data Science and Applied Research Team. I love problems at the intersection of statistics, economics, causal inference, machine learning, and social impact. Let's talk about how statistics can be used to fight gender-based violence, innovations in machine learning for causal inference, and where industry experimentation research is headed.</p>
-<p>In my free time, I love camping and backpacking, planning my next adventure, and coming up with new pastry recipes. </p>
+<p>In my free time, I love camping and backpacking, reading just about anything, and coming up with new pastry recipes. </p>
 <p>For more, please see my CV <a href="cv.pdf">here</a>, or reach out on <a href="https://www.linkedin.com/in/rinafriedberg/">LinkedIn</a>!</p>
 </td></tr></table>
 </td>
