--- a/research.html
+++ b/research.html
@@ -19,12 +19,17 @@
 <div id="toptitle">
 <h1>Publications and Preprints</h1>
 </div>
+<p><b>R. Friedberg</b>, R. Rogers. Privacy Aware Experimentation over Sensitive Groups: A General Chi Square Approach. 2022. (<a href="https://arxiv.org/abs/2208.08564">arxiv</a>)</p>
+<p><b>R. Friedberg</b>, S. Ambler, G. Saint-Jacques.Representation-Aware Experimentation: Group Inequality Analysis for A/B Testing and Alerting. 2022. (<a href="https://arxiv.org/abs/2204.12011">arxiv</a>)</p>
+<p><b>R. Friedberg</b>, K. Rajkumar, J. Mao, Q. Yao, Y. Yu, M. Liu. Causal Estimation of Position Bias in Recommender Systems Using Marketplace Instruments. 2022. (<a href="https://arxiv.org/abs/2205.06363">arxiv</a>). <i>R. Friedberg and K. Rajkumar contributed equally to this work.</i> </p>
+<p>E. Rosenman, <b>R. Friedberg</b>, M. Baiocchi. Robust Designs for Prospective Randomized Trials Surveying Sensitive Topics. 2022. (<a href="https://arxiv.org/abs/2108.08944">arxiv</a>)</p>
 <p><b>R. Friedberg</b>, J. Tibshirani, S. Athey, S. Wager. Local Linear Forests. Journal of Computational and Graphical Statistics, 2020. (<a href="https://arxiv.org/abs/1807.11408">arxiv</a>, <a href="https://www.tandfonline.com/doi/abs/10.1080/10618600.2020.1831930">paper</a>, <a href="https://www.youtube.com/watch?v=98rdcUrSAmc">short presentation</a>)</p>
 <p><b>R. Friedberg</b>, C. Sarnquist, G. Nyairo, M. Amuyunzu-Nyamongo, M. Baiocchi. Understanding the spatial burden of gender-based violence: Modelling patterns of violence in Nairobi, Kenya through geospatial information. Under review. 2020. (<a href="https://arxiv.org/abs/2002.06710">arxiv</a>)</p>
 <p><b>R. Friedberg</b>, M. Baiocchi, E. Rosenman, M. Amuyunzu-Nyamongo, G. Nyairo, C. Sarnquist. Mental health and gender-based violence: An exploration of depression, PTSD, and anxiety among adolescents in informal settlements participating in an empowerment intervention. Under review. 2020.</p>
 <p>M. Baiocchi, <b>R. Friedberg</b>, E. Rosenman, M. Amuyunzu-Nyamongo, G. Oguda, D. Otieno, C. Sarnquist. Prevalence and risk factors for sexual assault among class 6 students in unplanned settlements of Nairobi, Kenya: Baseline analysis from the IMPower &amp; Sources of Strength cluster randomized controlled trial. PLOS One, 2019. (<a href="https://journals.plos.org/plosone/article/comments?id=10.1371/journal.pone.0213359">paper</a>)</p>
 <p>E. Rosenman, C. Sarnquist, <b>R. Friedberg</b>, M. Amuyunzu-Nyamongo, G. Oguda, D. Otieno, M. Baiocchi. Empirical Insights for Improving Sexual Assault Prevention: Early Evidence from a Cluster-Randomized Trial of IMPower and Sources of Strength. Violence Against Women, 2019. (<a href="https://journals.sagepub.com/doi/abs/10.1177/1077801219886380">paper</a>)</p>
 <p>J. Clancy, <b>R. Friedberg</b>, I. Kasmalkar, I. Loh, T. Padurariu, C. Silva, S. Vasudevan. Ergodicity and Conservativity of products of infinite transformations and their inverses. Colloquium Mathematicum, 2016. (<a href="https://arxiv.org/abs/1408.2445">arxiv</a>, <a href="https://www.researchgate.net/publication/264673831_Ergodicity_and_Conservativity_of_products_of_infinite_transformations_and_their_inverses">paper</a>)</p>
+<p>+ Indicates equal author contributions.</p>
 </td>
 </tr>
 </table>
